--- a/index.html
+++ b/index.html
@@ -101,13 +101,154 @@
     <main class="index">
         <section class="typography">
             <div class="container">
-                <h1 class="title typography__title title--primary">Typography</h1>
-                <p>Sed ut perspiciatis unde omnis iste na tus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque iplo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis”et quasi architecto beata</p>
+                <div class="title typography__title title--primary">Typography</div>
+                <p>Sed ut perspiciatis unde omnis iste na tus error <span>sit voluptatem</span> accusantium doloremque veritatem laudantium, totam rem aperiam, eaque iplo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae</p>
+                <div class="typography__content">
+                    <h1>Heading One (44)</h1>
+                    <p>Sed ut perspiciatis unde omnis iste na tus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque iplo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae</p>
+                    <h2>Heading Two (34)</h2>
+                    <p>Sed ut perspiciatis unde omnis iste na tus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque iplo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae</p>
+                    <h3>Heading Three (24)</h3>
+                    <p>Sed ut perspiciatis unde omnis iste na tus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque iplo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae</p>
+                    <h4>Heading Four (20)</h4>
+                    <p>Sed ut perspiciatis unde omnis iste na tus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque iplo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae</p>
+                    <h5>Heading Five (17)</h5>
+                    <p>Sed ut perspiciatis unde omnis iste na tus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque iplo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae</p>
+                    <h6>Heading Six (13)</h6>
+                    <p>Sed ut perspiciatis unde omnis iste na tus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque iplo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae</p>
+                </div>
+                <div class="lines typography__lines">
+                    <div class="lines__top"></div>
+                    <div class="lines__center"></div>
+                    <div class="lines__bottom"></div>
+                </div>
+            </div>
+        </section>
+        <section class="content">
+            <div class="container">
+                <div class="the-content">
+                    <div class="title the-content__title title--primary">Text With Image</div>
+                    <p>Sed ut perspiciatis unde omnis iste na tus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque iplo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae</p>
+                    <div class="the-content__wrapper">
+                        <div class="the-content__wrap">
+                            <img src="./image/typography/image_01.png" alt="image_01">
+                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae. Totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto beatae voluptate accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque </p>
+                        </div>
+                        <div class="the-content__wrap">
+                            <img src="./image/typography/image_02.png" alt="image_02">
+                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae. Totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto beatae voluptate Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto beatae voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae. </p>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="lines content__lines">
+                    <div class="lines__top"></div>
+                    <div class="lines__center"></div>
+                    <div class="lines__bottom"></div>
+                </div>
+            </div>
+        </section>
+        <section class="blockquotes">
+            <div class="container">
+                <div class="title blockquotes__title title--primary">Blockquotes</div>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto.</p>
+                <div class="blockquotes__content">
+                    <p class="blockquotes__text">“Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto beatae!”</p>
+                    <p class="blockquotes__name">Ashley Williams</p>
+                </div>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto.</p>
+                <div class="blockquotes__content blockquotes__content--bg">
+                    <p class="blockquotes__text blockquotes__text--bg">“Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto beatae!”</p>
+                    <p class="blockquotes__name blockquotes__name--bg">Ashley Williams</p>
+                </div>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque veritatem laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatiset quasi architecto.</p>
+                <div class="lines blockquotes__lines">
+                    <div class="lines__top"></div>
+                    <div class="lines__center"></div>
+                    <div class="lines__bottom"></div>
+                </div>
+            </div>
+        </section>
+        <section class="tables">
+            <div class="container">
+                <div class="title tables__title title--primary">Table</div>
+                <div class="table">
+                    <table>
+                        <tr class="table__head">
+                            <th>Title One</th>
+                            <th>Title One</th>
+                            <th>Title One</th>
+                            <th>Title One</th>
+                        </tr>
+                        <tr class="table__body">
+                            <td>Title One</td>
+                            <td>Title One</td>
+                            <td>Title One</td>
+                            <td>Title One</td>
+                        </tr>
+                        <tr class="table__body">
+                            <td>Title One</td>
+                            <td>Title One</td>
+                            <td>Title One</td>
+                            <td>Title One</td>
+                        </tr>
+                        <tr class="table__body">
+                            <td>Title One</td>
+                            <td>Title One</td>
+                            <td>Title One</td>
+                            <td>Title One</td>
+                        </tr>
+                        <tr class="table__body">
+                            <td>Title One</td>
+                            <td>Title One</td>
+                            <td>Title One</td>
+                            <td>Title One</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <div class="container"></div>
+        <div class="container">
+            <div class="lines footer__lines">
+                <div class="lines__top"></div>
+                <div class="lines__center"></div>
+                <div class="lines__bottom"></div>
+            </div>
+            <div class="footer__content">
+                <div class="footer__left">
+                    <div class="logo footer__logo">
+                        <a href="#" class="custom-logo-link">
+                            <img src="./image/logo.png" class="custom-logo" alt="logo">
+                        </a>
+                    </div>
+                    <div class="socials footer__socials">
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">instagram</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">facebook</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">pinterest</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__right">
+                    <div class="subscribe-form">
+                        <form action="#" method="post">
+                            <div class="subscribe-form__group">
+                                <input type="email" class="input subscribe-form__input" placeholder="Enter email">
+                            </div>
+                            <button type="submit" class="subscribe-form__button">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <div class="popup">
